tests/miniJava/neg/000235_mutation.MiniJava
class java { public static void false Main ( String [ ] java ) { { } } }
